added property file and code for compiling java file run time